# joystick-converter

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: copilot-instructions.md
.github/workflows/: build.yml
config_software/: config_tool.py  requirements.txt
docs/: API.md  BUILD.md  DEBUG_MODE.md  DEBUG_MODE_CN.md  EXAMPLES.md  LOGGING_CN.md  PROJECT_SUMMARY.md  README_CN.md  TROUBLESHOOTING.md
firmware/: CMakeLists.txt  config.c  config.h  logging.c  logging.h  macro.c  macro.h  main.c  remapping.c  remapping.h  tusb_config.h  usb_descriptors.c  usb_device.c  usb_device.h  usb_host.c  usb_host.h
